--- a/changelog/v0.29.0.md
+++ b/changelog/v0.29.0.md
@@ -1,20 +1,21 @@
-# Release Notes (v0.28.0...main)
-
-## Changes
+## New
+- Support OpenTelemetry Tracing via settings in the `Pomerium` CRD. @wasaga in https://github.com/pomerium/ingress-controller/pull/1127
 - Implement support for UDP routes in the ingress controller, allowing configuration of routes using the "udp" protocol. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1079](https://github.com/pomerium/ingress-controller/pull/1079) (ENG-1740))
 - Introduce the `codec_type` setting to the ingress controller, enabling configuration of codec types including support for `http3` with necessary updates to Kubernetes manifests for UDP 443 routing. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1085](https://github.com/pomerium/ingress-controller/pull/1085) (ENG-1788))
 - Rename the `codec_type` option to `codecType` for consistency with other configuration options. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1087](https://github.com/pomerium/ingress-controller/pull/1087))
-- Unset the GOOS variable in the Makefile for the 'envoy' target to ensure the get-envoy command is built for the host OS instead of the target OS. ([@kenjenkins](https://github.com/kenjenkins) in [#1088](https://github.com/pomerium/ingress-controller/pull/1088))
-- Implement fields `description` and `logo_url` for routes and `source_ppl` for policies in the ingress controller. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1089](https://github.com/pomerium/ingress-controller/pull/1089) (ENG-1876))
+- Implement fields `description` and `logo_url` for routes and `source_ppl` for policies. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1089](https://github.com/pomerium/ingress-controller/pull/1089) (ENG-1876))
 - Implement a mechanism to terminate the process gracefully when bootstrap secrets are detected, preventing potential conflicts or errors. ([@wrmedford](https://github.com/wrmedford) in [#1091](https://github.com/pomerium/ingress-controller/pull/1091))
 - Implement a more flexible regular expression for version branches in the continuous integration pipeline to accommodate a wider range of versioning schemes. ([@wasaga](https://github.com/wasaga) in [#1092](https://github.com/pomerium/ingress-controller/pull/1092))
 - Reconfigure the Pomerium container to use ports 8443/8080 and advertise the HTTP/3 port as 443, addressing compatibility issues with certain Kubernetes environments. ([@wasaga](https://github.com/wasaga) in [#1101](https://github.com/pomerium/ingress-controller/pull/1101))
 - Introduce `bearer_token_format` and `idp_access_token_allowed_audiences` as configurable global and route-level options in the ingress controller to support new IdP token configurations. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1103](https://github.com/pomerium/ingress-controller/pull/1103) (ENG-2020, ENG-2020))
 - Integrate support for new IdP token options in the ingress controller by adding `BearerTokenFormat` and `idp_access_token_allowed_audiences` fields to the `Route` and `Settings` messages. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1106](https://github.com/pomerium/ingress-controller/pull/1106) (ENG-2020, ENG-2020))
 - Upgrade the core component to incorporate bug fixes for identity provider (IDP) token handling. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1108](https://github.com/pomerium/ingress-controller/pull/1108))
+
+## Changes
 - Correct the regular expression used for matching release branch names to ensure proper branch identification. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1111](https://github.com/pomerium/ingress-controller/pull/1111))
-- Upgrade the core component to incorporate the latest bug fixes and improvements. ([@calebdoxsey](https://github.com/calebdoxsey) in [#1112](https://github.com/pomerium/ingress-controller/pull/1112))
+- Unset the GOOS variable in the Makefile for the 'envoy' target to ensure the get-envoy command is built for the host OS instead of the target OS. ([@kenjenkins](https://github.com/kenjenkins) in [#1088](https://github.com/pomerium/ingress-controller/pull/1088))
 - Update the `open-docs-pull-request.sh` script to reflect the new destination path for the `k8s/reference.md` file. ([@kenjenkins](https://github.com/kenjenkins) in [#990](https://github.com/pomerium/ingress-controller/pull/990))
+- Revert `externalTrafficPolicy` to default (`cluster`) by @wasaga in https://github.com/pomerium/ingress-controller/pull/1129
 
 ## Testing & CI
 - Update the Pomerium Core to the latest commit in the main branch to incorporate recent changes and improvements. ([@apparitor](https://github.com/apparitor) in [#1070](https://github.com/pomerium/ingress-controller/pull/1070))
